--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
     <div>
         你好
     </div>
+    <ul>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+        <li><a href="#"></a></li>
+    </ul>
     <script src="./js/index.js"></script>
 </body>
 
