master提交并上传了修改的文件

--- a/index.html
+++ b/index.html
@@ -11,15 +11,7 @@
 </head>
 
 <body>
-    <div>
-        你好
-    </div>
-    <ul>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-        <li><a href="#"></a></li>
-    </ul>
+    <h2>master</h2>
     <script src="./js/index.js"></script>
 </body>
 
